# Fastapi-boilerplate

./: .coveragerc  .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  TODO.md  docker-compose.yaml  setup.cfg  tox.ini
app/: __init__.py  apis.py  app.py  config.py  manage.py  requirements.txt
app/alembic/versions/: 9b040ea06803_20210731_00_20_47_migration.py
app/app/: main.py
app/app/api/: deps.py  routes.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/auth/: __init__.py  schemas.py  view.py
app/app/api/api_v1/endpoints/auth/crud/: crud_user.py
app/app/api/auth/: api.py  progress.md
app/app/api/example_user/: __init__.py  api.py
app/app/common/: utils.py  validator.py
app/app/core/: __init__.py  celery_app.py  config.py  security.py
app/app/crud/: __init__.py  base.py  user.py
app/app/db/: base.py  base_class.py  init_db.py  session.py
app/app/models/: __init__.py  user.py
app/app/models/auth/: __init__.py  user.py
app/app/models/sql_views/: userview.sql
app/app/schemas/: __init__.py  response.py  user.py
app/app/utils/: decorator.py
app/common/: email.py  utils.py
app/extensions/: dto.py  mail.py  messages.py  view.py
app/extensions/api/: dto.py
app/extensions/common/: exceptions.py  utils.py
app/extensions/controllers/: controller.py
app/extensions/observability/: __init__.py  logging.py
app/extensions/utils/: decorator.py  file_handler.py  response.py  types.py  util.py
app/modules/: __init__.py
app/modules/auth/: auth_controller.py  auth_dto.py  auth_view.py
app/modules/sample_mod/: __init__.py  decorator.py  sample_controller.py  sample_dto.py  sample_view.py
app/modules/sample_mod/datadef/: __init__.py  sample.py
app/templates/: confirmation.html  reset_password.html  welcome.html
app/translations/: en.yml  vi.yml
docker/app/: gunicorn_conf.py
docs/: 01.multilanguage.md  fastapi_doc.md  pydantic_model.py
