[metadata]
name = hoovadabase
version = attr: app.app.__version__
description = Hoovada base services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/hoovada/hoovada-python-base.git
author = Hoovada Team
author_email = admin@hoovada.com
maintainer = Hoovada Team
maintainer_email = admin@hoovada.com
license = Hoovada Proprietary License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = OS Independent

[options]
zip_safe = False
packages = app
python_requires = >=3.5


[flake8]
max_line_length = 88
extend-ignore = E203
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache


[isort]
combine_as_imports = True
profile = black


[mypy]
python_version = 3.5
plugins = pydantic.mypy, sqlmypy
ignore_missing_imports = True
disallow_untyped_defs = True
